fix(): remove justify align (paragraphs)

--- a/src/app/homepage/homepage.component.scss
+++ b/src/app/homepage/homepage.component.scss
@@ -121,7 +121,7 @@
     margin-top: -10px !important;
   }
   p {
-    text-align: justify;
+    // text-align: justify;
   }
 }
 
